--- a/themes/cool/index.twig
+++ b/themes/cool/index.twig
@@ -22,52 +22,58 @@
     {# <link rel="stylesheet" href="{{ theme_url }}/../shared//css/dorid-sans.css" type="text/css" /> #}
     <!-- End -->
     <link rel="stylesheet" href="{{ theme_url }}/css/style.css" type="text/css" />
+    <link rel="stylesheet" href="{{ theme_url }}/css/nav.css" type="text/css" />
 
 </head>
 <!-- "Widescreen-mode" can be activated in portfolio/config/config.yml -->
 <body{% if config.theme_config.widescreen %} class="widescreen"{% endif %}>
-    <div class="header" role="banner">
-        <div class="container">
-            <a class="nav-toggle" id="nav-toggle" title="Toggle Menu" role="button" aria-controls="nav" aria-expanded="false" tabindex="1">
+
+    <header class="site-header">
+        <div class="hero-image" style="background-image: url({{ base_url }}/image/breadkatt.png?sc=banner1&a=25,0,25,0);">
+            <a id="nav-toggle" title="Toggle Menu" role="button" aria-controls="nav" aria-expanded="false" tabindex="1">
                 <i class="fa fa-bars" aria-hidden="true" id="toggler"></i>
                 <span class="sr-only">Toggle Menu</span>
             </a>
-            {% if pages["_meta"].meta.logo %}
-                <div class="logo" aria-hidden="true">
+            <div class="hero-text"> 
+                {% if pages["_meta"].meta.logo %}
+                    <div class="logo" aria-hidden="true">
+                        <a href="{{ "index"|link }}">
+                            <img src="{{ base_url }}/{{ pages["_meta"].meta.logo|url }}" alt="" />
+                        </a>
+                    </div>
+                {% endif %}
+                <div class="title" {{ pages["_meta"].meta.tagline ? ' class="tagline"' }}>
                     <a href="{{ "index"|link }}">
-                        <img src="{{ base_url }}/{{ pages["_meta"].meta.logo|url }}" alt="" />
+                        <h1>{{ site_title }}</h1>
+                        {{ pages["_meta"].meta.tagline|markdown }}
                     </a>
                 </div>
-            {% endif %}
-            <div class="title" {{ pages["_meta"].meta.tagline ? ' class="tagline"' }}>
-                <a href="{{ "index"|link }}">
-                    <h1>{{ site_title }}</h1>
-                    {{ pages["_meta"].meta.tagline|markdown }}
-                </a>
             </div>
-            <div class="nav">
-                <div id="nav" role="navigation" tabindex="-1">
-                    <ul>
-                        {% for page in pages(depthOffset=-1) if page.title and not page.hidden %}
-                            <li{% if page.id == current_page.id %} class="active"{% endif %}>
-                                <a href="{{ page.url }}">{{ page.title }}</a>
-                            </li>
-                        {% endfor %}
-                    </ul>
-                </div>
-            </div>
-            <div class="flash-region">
-              <img class="flash-img" src="{{ base_url }}/image/breadkatt.png?sc=banner1&a=25,0,25,0">
-            </div>
+        
         </div>
-    </div>
-    <div class="main" role="main">
+        <nav id="nav" role="navigation" tabindex="">
+            <ul>
+                {% for page in pages(depthOffset=-1) if page.title and not page.hidden %}
+                <li{% if page.id == current_page.id %} class="active" {% endif %}>
+                    <a href="{{ page.url }}">{{ page.title }}</a>
+                    </li>
+                {% endfor %}
+            </ul>
+        </nav>
+    </header>
+
+    <main class="main" role="main">
         <div class="container">
+            {{ content }}
+        </div>
+    </main>
+
+    <footer class="site-footer">
+        {# <div class="container">  #}
+            <div>
+                <p>Skapad av: Rikard Larsson &#169;{{ "now"|date("Y") }}</p>
             
-        </div>
-    </div>
-    <div class="footer">
-        <div class="container">
+            </div>
             <div class="social">
                 <!-- Loads from FontAwesome (themes/shared/css/font-awesome.min.css) -->
                 {% for social in pages["_meta"].meta.social %}
@@ -77,11 +83,8 @@
                     </a>
                 {% endfor %}
             </div>
-            <p>
-                En footer med lite text.
-            </p>
-        </div>
-    </div>
+        {# </div> #}
+    </footer>
 
     <script src="{{ theme_url }}/../shared//js/modernizr-3.3.1-custom.min.js" type="text/javascript"></script>
     <script src="{{ theme_url }}/../shared//js/utils.js" type="text/javascript"></script>
