--- a/themes/cool/index.twig
+++ b/themes/cool/index.twig
@@ -18,13 +18,12 @@
         <link rel="canonical" href="{{ current_page.url }}" />
     {% endif %}
 
-    <link rel="stylesheet" href="{{ theme_url }}/../shared/css/font-awsome.min.css" type="text/css" />
+    {# <link rel="stylesheet" href="{{ theme_url }}/../shared/css/font-awsome.min.css" type="text/css" />
     <!-- Insert font choice here -->
     {# <link rel="stylesheet" href="{{ theme_url }}/../shared//css/dorid-sans.css" type="text/css" /> #}
-    <!-- End -->
+    <!-- End --> 
     <link rel="stylesheet" href="{{ theme_url }}/css/style.css" type="text/css" />
-    <link rel="stylesheet" href="{{ theme_url }}/css/nav.css" type="text/css" />
-    <link rel="stylesheet" href="{{ theme_url }}/css/small.css" type="text/css" />
+    {# <link rel="stylesheet" href="{{ theme_url }}/css/nav.css" type="text/css" /> #}
 
 </head>
 <!-- "Widescreen-mode" can be activated in portfolio/config/config.yml -->
@@ -33,7 +32,7 @@
     <header class="site-header">
         <div class="hero-image" style="background-image: url({{ base_url }}/image/breadkatt.png?sc=banner1&a=25,0,25,0);">
             <a id="nav-toggle" title="Toggle Menu" role="button" aria-controls="nav" aria-expanded="false" tabindex="1">
-                <i class="fa fa-bars" aria-hidden="true" id="toggler"></i>
+                <i class="fas fa-bars" aria-hidden="true" id="toggler"></i>
                 <span class="sr-only">Toggle Menu</span>
             </a>
             <div class="hero-div"></div>
@@ -81,7 +80,7 @@
                 <!-- Loads from FontAwesome (themes/shared/css/font-awesome.min.css) -->
                 {% for social in pages["_meta"].meta.social %}
                     <a href="{{ social.url }}" title="{{ social.title }}" role="button">
-                        <i class="fa fa-{{ social.icon }}" aria-hidden="true"></i>
+                        <i class="{{ social.icon }}" aria-hidden="true"></i>
                         <span class="sr-only">{{ social.title }}</span>
                     </a>
                 {% endfor %}
