--- a/themes/cool/oldcss/nav.css
+++ b/themes/cool/oldcss/nav.css
@@ -20,8 +20,10 @@
 }
 
 #nav {
-    padding: 1.5em 0;
+    padding-top: 22px;
     padding-right: 3em;
+    padding-bottom: 0px;
+    padding-top: 22px;
     text-align: right;
 }
 
