--- a/themes/cool/scss/style.scss
+++ b/themes/cool/scss/style.scss
@@ -1,3 +1,4 @@
+@use 'sass:color';
 @import '../../node_modules/normalize.css/normalize';
 
 @import '../../shared/fontawesome/scss/fontawesome';
@@ -11,32 +12,48 @@ $fa-font-path: '../../shared/fontawesome/webfonts';
 
 @import '../oldcss/style';
 @import '../oldcss/nav';
+@import 'variables';
+@import 'typography';
 
-.active {
-    border-bottom: solid 2px;
-    
-    a:hover {
-        text-decoration: none;
-    }
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    font-family: 'Fira Code', monospace;
+body {
+    background-image: linear-gradient(-20deg, #2b5876 0%, #4e4376 100%);
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    overflow-y: scroll;
 }
 
-p {
-    font-family: 'Noto Serif', serif;
+/* header */
+
+.site-header {
+    // height: 330px;
+    height: 100%;
+    flex: 0 0 auto;
+    background-color: $header-footer-colour;
+    color: $link-colour;
+    padding-bottom: 0.5em;
 }
 
-#nav ul li {
-    margin-bottom: 8px;
-    padding-left: 4px;
-    padding-right: 4px;
+.site-header a,
+.site-header a:visited {
+    color: $link-colour;
+}
+
+.hero-text {
+    display: flex;
+    padding: 0.5em;
+    background-color: rgba(250, 250, 250, 0.7);
+    padding-left: 1em;
+    width: 15%;
+    min-width: 265px;
+    border-top-right-radius: 2em;
+    border-bottom-right-radius: 2em;
 }
 
 .hero-image {
@@ -47,5 +64,80 @@ p {
 }
 
 .hero-div {
-    height: 50px;
+    height: 20px;
+}
+
+/* Nav*/
+.active {
+    border-bottom: solid 2px #000;
+}
+
+/* Main */
+.main {
+    min-height: 580px;
+    flex: 1 0 auto;
+    padding: 2em;
+    background-color: $main-colour;
+    width: 70%;
+    margin: auto;
+    display: flex;
+}
+
+.container {
+    margin: {
+        top: 0;
+        left: auto;
+        right: auto;
+        bottom: auto;
+    }
+
+    padding: {
+        right: 2em;
+        left: 2em;
+    }
+
+    h1,
+    p {
+        padding-top: 0.8em;
+    }
+
+    a,
+    a:visited {
+        color: $link-colour;
+    }
+
+    img {
+        margin: auto;
+        display: block;
+        width: 100%;
+        max-width: 400px;
+    }
+}
+
+/* Footer */
+.site-footer {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: stretch;
+    align-content: space-between;
+    background: $header-footer-colour;
+    color: $link-colour;
+    padding: {
+        top: 1em;
+        bottom: 1em;
+        left: 2em;
+        right: 2em;
+    };
+
+}
+
+.site-footer a {
+    color: #f0f0f0;
+}
+
+.social a {
+    font-size: 22pt;
+    color: #f0f0f0;
 }
