--- a/themes/cool/css/style.css
+++ b/themes/cool/css/style.css
@@ -6457,108 +6457,23 @@ readers do not read off random characters that represent icons */
   font-weight: 400;
 }
 
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
-/* html, body {
-    height: 100%;
-} */
-body {
-  background-image: linear-gradient(-20deg, #2b5876 0%, #4e4376 100%);
-  background-size: cover;
-  display: flex;
-  flex-direction: column;
-}
-
-/* Header */
-.hero-text {
-  display: flex;
-  padding: 0.5em;
-  background-color: rgba(250, 250, 250, 0.7);
-  padding-left: 1em;
-  width: 15%;
-  min-width: 250px;
-  border-top-right-radius: 2em;
-  border-bottom-right-radius: 2em;
-}
-
-.site-header {
-  height: 330px;
-  flex: 0 0 auto;
-  background-color: #EAD5BA;
-  color: #2b2e30;
-  /* padding: 0 2em; */
-}
-
-.site-header a, .site-header a:visited {
-  color: #2b2e30;
-}
-
 /* Main */
-.main {
-  min-height: 580px;
-  flex: 1 0 auto;
-  padding: 2em;
-  background-color: #f0f0f0;
-  width: 70%;
-  margin: auto;
-  display: flex;
-}
-
-.container {
-  margin: auto;
-  padding: 0 2em 0 2em;
-  margin-top: 0;
-}
-
-.container h1, p {
-  padding-top: 0.8em;
-}
-
-.container a, a:visited {
-  color: #323031;
-}
-
-.container img {
-  margin: auto;
-  display: block;
-  width: 100%;
-  max-width: 400px;
-}
-
-/* Footer */
-.site-footer {
-  /* flex: 0 0 auto; */
-  background: #EAD5BA;
-  color: #2b2e30;
-  padding: 2em;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: stretch;
-  align-content: space-between;
-}
-
-.site-footer a {
-  color: #f0f0f0;
-}
-
-.social a {
-  font-size: 22pt;
-  color: #323031;
-}
-
 @media (max-width: 767px) {
+  .main {
+    width: 80%;
+  }
+
   .hero-image {
     height: initial;
   }
 
   .site-header {
     height: 100%;
+  }
+}
+@media (min-width: 767px) {
+  .main {
+    width: 70%;
   }
 }
 .hidden {
@@ -6583,8 +6498,10 @@ body {
 }
 
 #nav {
-  padding: 1.5em 0;
+  padding-top: 22px;
   padding-right: 3em;
+  padding-bottom: 0;
+  padding-top: 22px;
   text-align: right;
 }
 
