--- a/themes/cool/oldcss/nav.css
+++ b/themes/cool/oldcss/nav.css
@@ -22,7 +22,7 @@
 #nav {
     padding-top: 22px;
     padding-right: 3em;
-    padding-bottom: 0px;
+    padding-bottom: 0;
     padding-top: 22px;
     text-align: right;
 }
