--- a/themes/cool/scss/nav.scss
+++ b/themes/cool/scss/nav.scss
@@ -19,7 +19,7 @@
     transition: height 0.5s ease-in !important;
 }
 
-#nav {
+.nav {
     padding-top: 22px;
     padding-right: 3em;
     padding-bottom: 0;
@@ -27,55 +27,55 @@
     text-align: right;
 }
 
-#nav ul {
+.nav ul {
     list-style: none;
     margin: 0;
     padding: 0;
 }
 
-#nav ul li {
+.nav ul li {
     display: inline-block;
     margin-left: 1em;
     padding: 0;
     font-weight: bold;
 }
 
-#nav ul li a {
+.nav ul li a {
     text-decoration: none;
 }
 
-#nav a:hover, #nav-toggle:hover {
+.nav a:hover, .nav-toggle:hover {
     text-decoration: underline;
 }
 
-#nav-toggle {
+.nav-toggle {
     display: none;
 }
 
 /* SMAll devices */
 
 @media (max-width: 767px) {
-     #nav {
+    .nav {
         clear: both;
         padding: 0;
     }
 
-    #nav ul {
+    .nav ul {
         padding-bottom: 1em;
     }
 
-    #nav ul li {
+    .nav ul li {
         display: block;
         margin-left: 0;
         text-align: center;
     }
 
-    #nav ul li a {
+    .nav ul li a {
         display: block;
         padding: 0.5em 0;
     }
 
-    .js #nav-toggle {
+    .js .nav-toggle {
         display: block;
         float: right;
         width: 2em;
@@ -86,15 +86,15 @@
         cursor: pointer;
     }
 
-    .js #nav-toggle>* {
+    .js .nav-toggle>* {
         vertical-align: middle;
     }
 
     .fa-bars {
-        text-shadow:2px 1px white
+        text-shadow: 2px 1px #fff;
     }
     
     .fa-times {
-        text-shadow:1px 1px white
+        text-shadow: 1px 1px #fff;
     }
 }
