--- a/themes/cool/index.twig
+++ b/themes/cool/index.twig
@@ -52,18 +52,20 @@
             </div>
         
         </div>
-        <nav id="nav" class="nav" role="navigation" tabindex="">
-            <ul>
-                {% for page in pages(depthOffset=-1) if page.title and not page.hidden %}
-                <li{% if page.id == current_page.id %} class="active gradient" {% endif %}>
-                    <a href="{{ page.url }}">{{ page.title }}</a>
-                        {% if page.meta.icon %}
-                            <i class="{{ page.meta.icon }}"></i>
-                        {% endif %}
-                    </li>
-                {% endfor %}
-            </ul>
-        </nav>
+        <div class="nav">
+            <div id="nav" role="navigation" tabindex="">
+                <ul>
+                    {% for page in pages(depthOffset=-1) if page.title and not page.hidden %}
+                    <li{% if page.id == current_page.id %} class="active gradient" {% endif %}>
+                        <a href="{{ page.url }}">{{ page.title }}</a>
+                            {% if page.meta.icon %}
+                                <i class="{{ page.meta.icon }}"></i>
+                            {% endif %}
+                        </li>
+                    {% endfor %}
+                </ul>
+            </div>
+        </div>
     </header>
 
     <main class="main" role="main">
