added a twig for report and made a css grid

--- a/themes/cool/scss/style.scss
+++ b/themes/cool/scss/style.scss
@@ -13,6 +13,7 @@ $fa-font-path: '../../shared/fontawesome/webfonts';
 @import 'nav';
 @import 'variables';
 @import 'typography';
+@import 'report';
 
 * {
     box-sizing: border-box;
