--- a/themes/cool/css/style.css
+++ b/themes/cool/css/style.css
@@ -6601,6 +6601,74 @@ p {
   font-size: 1.05em;
 }
 
+.kmom-box {
+  background: linear-gradient(to right, #2b5876, #4e4376);
+  grid-column: span 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-bottom: 5px;
+}
+
+.kmom-box-top {
+  padding: 0.5em;
+  background-color: #5f5f5f;
+  width: 100%;
+  height: 50px;
+}
+
+.kmom-box-content {
+  padding: 0.5em;
+  width: 100%;
+  background-color: #fff;
+}
+
+.kmom-box.project {
+  grid-column: span 3;
+}
+
+.landingpage {
+  display: grid;
+  gap: 1em;
+  margin-left: auto;
+  margin-right: auto;
+}
+.landingpage h1 {
+  text-align: center;
+  grid-column: span 3;
+  justify-self: center;
+}
+
+.kmom-box a,
+.kmom-box a:visited {
+  color: #fff;
+}
+
+@media (max-width: 767px) {
+  .kmom-box,
+.kmom-box.project,
+.landingpage h1 {
+    grid-column: span 4;
+  }
+}
+.kmom-frame {
+  display: flex;
+}
+
+.kmom-links,
+.kmom-content {
+  padding: 1em;
+}
+
+.kmom-links {
+  font-size: 0.9em;
+}
+
+.kmom-links a,
+.kmom-links a:visited {
+  color: #302e30;
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
