--- a/themes/cool/scss/style.scss
+++ b/themes/cool/scss/style.scss
@@ -14,6 +14,7 @@ $fa-font-path: '../../shared/fontawesome/webfonts';
 @import 'variables';
 @import 'typography';
 @import 'report';
+@import 'kmom';
 
 * {
     box-sizing: border-box;
