--- a/themes/cool/scss/nav.scss
+++ b/themes/cool/scss/nav.scss
@@ -44,7 +44,8 @@
     text-decoration: none;
 }
 
-.nav a:hover, .nav-toggle:hover {
+.nav a:hover,
+.nav-toggle:hover {
     text-decoration: underline;
 }
 
