--- a/themes/cool/scss/kmom.scss
+++ b/themes/cool/scss/kmom.scss
@@ -16,3 +16,9 @@
 .kmom-links a:visited {
     color: $link-colour;
 }
+
+@media (max-width: 767px) {
+    .kmom-links {
+        display: none;
+    }
+}
