--- a/themes/cool/index.twig
+++ b/themes/cool/index.twig
@@ -49,8 +49,7 @@
                         {{ pages["_meta"].meta.tagline|markdown }}
                     </a>
                 </div>
-            </div>
-        
+            </div>        
         </div>
         <div class="nav">
             <div id="nav" role="navigation" tabindex="">
@@ -83,11 +82,11 @@
             </div>
             <div class="social">
                 <!-- Loads from FontAwesome (themes/shared/css/font-awesome.min.css) -->
-                {% for social in pages["_meta"].meta.social %}
-                    <a href="{{ social.url }}" title="{{ social.title }}" role="button">
-                        <i class="{{ social.icon }}" aria-hidden="true"></i>
-                        <span class="sr-only">{{ social.title }}</span>
-                    </a>
+                {% for social in pages["_meta"].meta.social %}<!--
+                    --><a href="{{ social.url }}" title="{{ social.title }}" role="button"><!--
+                    --><i class="{{ social.icon }}" aria-hidden="true"></i><!--
+                    --><span class="sr-only">{{ social.title }}</span><!--
+                    --></a>
                 {% endfor %}
             </div>
         {# </div> #}
