Session works for all the pages, it detects action value

--- a/themes/cool/index.twig
+++ b/themes/cool/index.twig
@@ -22,7 +22,11 @@
     <!-- Insert font choice here -->
     {# <link rel="stylesheet" href="{{ theme_url }}/../shared//css/dorid-sans.css" type="text/css" /> #}
     <!-- End --> 
-    <link rel="stylesheet" href="{{ theme_url }}/css/style.css" type="text/css" />
+    {% if config.session.theme == "dark" %}
+        <link rel="stylesheet" href="{{ theme_url }}/css/style-dark.css" type="text/css" />
+    {% else %}
+        <link rel="stylesheet" href="{{ theme_url }}/css/style.css" type="text/css" />
+    {% endif %}
     {# <link rel="stylesheet" href="{{ theme_url }}/css/style.min.css" type="text/css" /> #}
 </head>
 <!-- "Widescreen-mode" can be activated in portfolio/config/config.yml -->
@@ -49,7 +53,8 @@
                         {{ pages["_meta"].meta.tagline|markdown }}
                     </a>
                 </div>
-            </div>        
+            </div>
+        
         </div>
         <div class="nav">
             <div id="nav" role="navigation" tabindex="">
@@ -68,6 +73,7 @@
     </header>
 
     <main class="main" role="main">
+        {{dump(config.session)}}
         <div class="container">
             {{ content }}
         </div>
@@ -82,9 +88,9 @@
             </div>
             <div class="social">
                 <!-- Loads from FontAwesome (themes/shared/css/font-awesome.min.css) -->
-                {% for social in pages["_meta"].meta.social %}<!--
-                    --><a href="{{ social.url }}" title="{{ social.title }}" role="button"><!--
-                    --><i class="{{ social.icon }}" aria-hidden="true"></i><!--
+                {% for social in pages["_meta"].meta.social %}
+                        <a href="{{ social.url }}" title="{{ social.title }}" role="button">
+                        <i class="{{ social.icon }}" aria-hidden="true"></i><!--
                     --><span class="sr-only">{{ social.title }}</span><!--
                     --></a>
                 {% endfor %}
