--- a/themes/cool/scss/variables.scss
+++ b/themes/cool/scss/variables.scss
@@ -1,6 +1,6 @@
 $main-colour: #d0f5ff;
-$link-colour: color.adjust(#2b2e30, $red:5);
-$header-footer-colour: #608aaa;
+$link-colour: #111;
+$header-footer-colour: lighten(#608aaa, 10%);
 $font-size: 1.5em;
 $line: 1.2;
 $magic-number: $font-size * $line;
