--- a/themes/cool/css/style-dark.css
+++ b/themes/cool/css/style-dark.css
@@ -6471,7 +6471,7 @@ h6 {
   font-size: 1.5em;
   line-height: 1.2;
   margin-bottom: 1.8em;
-  color: #000;
+  color: #fff;
 }
 
 p {
@@ -6479,7 +6479,7 @@ p {
   font-size: 1.125em;
   line-height: 1.2;
   margin-bottom: 1.8em;
-  color: #000;
+  color: #fff;
 }
 
 .site-footer p {
@@ -6604,7 +6604,7 @@ p {
   }
 }
 .kmom-box {
-  background: linear-gradient(to right, #335467, #497D95);
+  background: linear-gradient(to right, #000, #161618);
   grid-column: span 1;
   display: flex;
   flex-direction: column;
@@ -6664,12 +6664,12 @@ p {
 
 .kmom-links {
   font-size: 0.9em;
-  border-right: solid 1px rgba(17, 17, 17, 0.4);
+  border-right: solid 1px rgba(255, 255, 255, 0.4);
 }
 
 .kmom-links a,
 .kmom-links a:visited {
-  color: #111;
+  color: #fff;
 }
 
 @media (max-width: 767px) {
@@ -6684,7 +6684,7 @@ p {
 }
 
 body {
-  background-image: linear-gradient(-20deg, #335467 0%, #497D95 100%);
+  background-image: linear-gradient(-20deg, #000 0%, #161618 100%);
   background-size: cover;
   display: flex;
   flex-direction: column;
@@ -6695,26 +6695,26 @@ body {
 .site-header {
   height: 100%;
   flex: 0 0 auto;
-  background-color: #81a2bc;
-  color: #111;
+  background-color: #2e2e33;
+  color: #fff;
   padding-bottom: 0.5em;
 }
 
 .site-header a,
 .site-header a:visited {
-  color: #111;
+  color: #fff;
 }
 
 .hero-text {
   display: flex;
   padding: 0.5em;
-  background-color: rgba(250, 250, 250, 0.7);
+  background-color: rgba(0, 0, 0, 0.7);
   padding-left: 1em;
   width: 15%;
   min-width: 265px;
   border-top-right-radius: 2em;
   border-bottom-right-radius: 2em;
-  box-shadow: 5px 5px rgba(17, 17, 17, 0.6);
+  box-shadow: 5px 5px rgba(255, 255, 255, 0.6);
 }
 
 .hero-image {
@@ -6730,7 +6730,7 @@ body {
 
 /* Nav*/
 .active {
-  border-bottom: solid 2px #000;
+  border-bottom: solid 2px #818181;
 }
 
 /* Main */
@@ -6738,7 +6738,7 @@ body {
   min-height: 600px;
   flex: 1 0 auto;
   padding: 2em;
-  background-color: #d0f5ff;
+  background-color: #212124;
   margin: auto;
   display: flex;
 }
@@ -6757,7 +6757,7 @@ body {
 }
 .container a,
 .container a:visited {
-  color: #111;
+  color: #fff;
 }
 .container img {
   margin: auto;
@@ -6774,19 +6774,19 @@ body {
   justify-content: space-between;
   align-items: stretch;
   align-content: space-between;
-  background: #81a2bc;
-  color: #111;
+  background: #2e2e33;
+  color: #fff;
   padding-top: 1em;
   padding-bottom: 1em;
   padding-left: 2em;
   padding-right: 2em;
 }
 
-.site-footer a {
-  color: #2b2b2b;
+.site-footer .social a {
+  color: #fff;
 }
 
 .social a {
   font-size: 22pt;
-  color: #2b2b2b;
+  color: #fff;
 }
