--- a/themes/cool/scss/typography.scss
+++ b/themes/cool/scss/typography.scss
@@ -1,11 +1,3 @@
-@import '../../node_modules/normalize.css/normalize';
-
-@import '../../shared/fontawesome/scss/fontawesome';
-$fa-font-path: '../../shared/fontawesome/webfonts';
-
-@import '../../shared/fontawesome/scss/brands';
-@import '../../shared/fontawesome/scss/solid';
-@import '../../shared/fontawesome/scss/regular';
 @import url('https://fonts.googleapis.com/css2?family=Fira+Code&family=Roboto&display=swap');
 
 html {
@@ -22,6 +14,7 @@ h6 {
     font-size: $font-size;
     line-height: $line;
     margin-bottom: $magic-number;
+    color: $header-text-colour;
 }
 
 p {
@@ -29,7 +22,7 @@ p {
     font-size: $font-size * 0.75;
     line-height: $line;
     margin-bottom: $magic-number;
-   
+    color: $body-text-colour;
 }
 
 .site-footer p {
