--- a/themes/cool/scss/variables.scss
+++ b/themes/cool/scss/variables.scss
@@ -3,10 +3,15 @@ $link-colour: #111;
 $gradient-colour-a: #335467;
 $gradient-colour-b: #497D95;
 $header-footer-colour: lighten(#608aaa, 10%);
+$kmom-box-colour: #fff;
+$kmom-box: #fff;
+
 $header-text-colour: #000;
 $body-text-colour: #000;
+
 $footer-links:lighten($link-colour, 10%);
 $active-link-colour: #000;
+
 $font-size: 1.5em;
 $line: 1.2;
 $magic-number: $font-size * $line;
