--- a/themes/cool/analysis.twig
+++ b/themes/cool/analysis.twig
@@ -33,7 +33,7 @@
 <body{% if config.theme_config.widescreen %} class="widescreen"{% endif %}>
 
     <header class="site-header">
-        <div class="hero-image" style="background-image: url({{ base_url }}/image/landscape.jpg?sc=banner1&a=25,0,25,0);">
+            <div class="hero-image" style="background-image: url({{ base_url }}/image/landscape.jpg?sc=banner1&a=25,0,25,0);">
             <a id="nav-toggle" class="nav-toggle" title="Toggle Menu" role="button" aria-controls="nav" aria-expanded="false" tabindex="1">
                 <i class="fas fa-bars" aria-hidden="true" id="toggler" class="toggler"></i>
                 <span class="sr-only">Toggle Menu</span>
@@ -73,19 +73,8 @@
     </header>
 
     <main class="main" role="main">
-        <div class="kmom-frame">
-            <div class="kmom-links">
-                <a href="kmom01"><h3>Kmom01</h3></a>
-                <a href="kmom02"><h3>Kmom02</h3></a>
-                <a href="kmom03"><h3>Kmom03</h3></a>
-                <a href="kmom04"><h3>Kmom04</h3></a>
-                <a href="kmom05"><h3>Kmom05</h3></a>
-                <a href="kmom06"><h3>Kmom06</h3></a>
-                <a href="kmom10"><h3>Projekt</h3></a>
-            </div>
-            <div class="kmom-content">
+        <div class="analysis-landingpage">
             {{ content }}
-            </div>
         </div>
     </main>
 
