--- a/themes/cool/analysreport.twig
+++ b/themes/cool/analysreport.twig
@@ -75,13 +75,9 @@
     <main class="main" role="main">
         <div class="kmom-frame">
             <div class="kmom-links">
-                <a href="kmom01"><h3>Kmom01</h3></a>
-                <a href="kmom02"><h3>Kmom02</h3></a>
-                <a href="kmom03"><h3>Kmom03</h3></a>
-                <a href="kmom04"><h3>Kmom04</h3></a>
-                <a href="kmom05"><h3>Kmom05</h3></a>
-                <a href="kmom06"><h3>Kmom06</h3></a>
-                <a href="kmom10"><h3>Projekt</h3></a>
+                <a href="01_colors"><h3>Analys 1</h3></a>
+                <a href="02_load"><h3>Analys 2</h3></a>
+                <a href="03_design_principles"><h3>Analys 3</h3></a>
             </div>
             <div class="kmom-content">
             {{ content }}
