--- a/themes/cool/scss/kmom.scss
+++ b/themes/cool/scss/kmom.scss
@@ -10,6 +10,7 @@
 .kmom-links {
     font-size: $font-size * 0.6;
     border-right: solid 1px rgba($color: $link-colour, $alpha: 0.4);
+    width: 15%;
 }
 
 .kmom-links a,
