--- a/themes/cool/scss/report.scss
+++ b/themes/cool/scss/report.scss
@@ -44,10 +44,11 @@
     color: $kmom-box;
     text-decoration-color: $kmom-box;
 }
+
 .kmom-box a,
 .kmom-box a:visited {
     color: #fff;
-    text-decoration-color: $body-text-colour;
+    text-decoration-color: #fff;
 }
 
 @media (max-width: 767px) {
