--- a/themes/cool/css/style.css
+++ b/themes/cool/css/style.css
@@ -6468,7 +6468,6 @@ h4,
 h5,
 h6 {
   font-family: "Fira Code", monospace;
-  font-size: 1.5em;
   line-height: 1.2;
   margin-bottom: 1.8em;
   color: #000;
@@ -6671,11 +6670,13 @@ p {
 .kmom-links {
   font-size: 0.9em;
   border-right: solid 1px rgba(17, 17, 17, 0.4);
-  width: 15%;
+  min-width: 120px;
 }
 
 .kmom-links a,
-.kmom-links a:visited {
+.kmom-links a:visited,
+.kmom-content p a,
+.kmom-content p a:visited {
   color: #111;
 }
 
