moved css code from the colour modes into a style.scss

--- a/themes/cool/scss/style-light.scss
+++ b/themes/cool/scss/style-light.scss
@@ -1,9 +1,9 @@
 @use 'sass:color';
 
 @import 'common';
-@import 'variables-dark';
+@import 'variables';
 @import 'style';
-@import 'typography'; 
+@import 'typography';
 @import 'nav';
 @import 'small';
 @import 'report';
