--- a/themes/cool/css/style.css
+++ b/themes/cool/css/style.css
@@ -6464,7 +6464,7 @@ readers do not read off random characters that represent icons */
 }
 
 body {
-  background-image: linear-gradient(-20deg, #335467 0%, #497D95 100%);
+  background-image: linear-gradient(-20deg, #335467 0%, #497d95 100%);
   background-size: cover;
   display: flex;
   flex-direction: column;
@@ -6710,6 +6710,12 @@ p {
   .site-header {
     height: 100%;
   }
+
+  .social {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+  }
 }
 @media (min-width: 767px) {
   .main {
@@ -6717,7 +6723,7 @@ p {
   }
 }
 .kmom-box {
-  background: linear-gradient(to right, #335467, #497D95);
+  background: linear-gradient(to right, #335467, #497d95);
   grid-column: span 1;
   display: flex;
   flex-direction: column;
@@ -6823,7 +6829,7 @@ p {
 
 .analysis-box {
   margin: 5px;
-  background: linear-gradient(to right, #335467, #497D95);
+  background: linear-gradient(to right, #335467, #497d95);
   padding-bottom: 5px;
 }
 
@@ -6836,4 +6842,32 @@ p {
 .analysis-box a:visited {
   color: #fff;
   text-decoration-color: #fff;
+}
+
+.gallery {
+  display: grid;
+  gap: 1em;
+  margin-left: auto;
+  margin-right: auto;
+}
+.gallery h1 {
+  text-align: center;
+  grid-column: span 3;
+  justify-self: center;
+}
+
+.image {
+  margin-left: 1.5em;
+  margin-top: 1.5em;
+  margin-right: 1.5em;
+  margin-bottom: 1.5em;
+  box-shadow: 8px 8px 10px 6px rgba(65, 65, 65, 0.3);
+  grid-column: span 1;
+}
+
+@media (max-width: 767px) {
+  .image,
+.gallery h1 {
+    grid-column: span 1;
+  }
 }
