--- a/themes/cool/scss/variables-dark.scss
+++ b/themes/cool/scss/variables-dark.scss
@@ -4,6 +4,7 @@ $gradient-colour-a: #000;
 $gradient-colour-b: #161618;
 $header-footer-colour: lighten(#161618, 10%);
 $kmom-box-colour: lighten(#000, 10%);
+$image-shadow: 190;
 
 $header-text-colour: #fff;
 $body-text-colour: #fff;
