--- a/themes/cool/scss/variables.scss
+++ b/themes/cool/scss/variables.scss
@@ -5,6 +5,7 @@ $gradient-colour-b: #497d95;
 $header-footer-colour: lighten(#608aaa, 10%);
 $kmom-box-colour: #fff;
 $kmom-box: #fff;
+$image-shadow: 65;
 
 $header-text-colour: #000;
 $body-text-colour: #000;
