--- a/themes/cool/report.twig
+++ b/themes/cool/report.twig
@@ -23,11 +23,11 @@
     {# <link rel="stylesheet" href="{{ theme_url }}/../shared//css/dorid-sans.css" type="text/css" /> #}
     <!-- End --> 
     {% if config.session.theme == "dark" %}
-        <link rel="stylesheet" href="{{ theme_url }}/css/style-dark.css" type="text/css" />
+        <link rel="stylesheet" href="{{ theme_url }}/css/style-dark.min.css" type="text/css"/>
     {% else %}
-        <link rel="stylesheet" href="{{ theme_url }}/css/style.css" type="text/css" />
+        <link rel="stylesheet" href="{{ theme_url }}/css/style.min.css" type="text/css"/>
     {% endif %}
-    {# <link rel="stylesheet" href="{{ theme_url }}/css/style.min.css" type="text/css" /> #}
+    {# <link rel="stylesheet" href="{{ theme_url }}/css/style.min.css" type="text/css"/> #}
 </head>
 <!-- "Widescreen-mode" can be activated in portfolio/config/config.yml -->
 <body{% if config.theme_config.widescreen %} class="widescreen"{% endif %}>
