--- a/themes/cool/scss/gallery.scss
+++ b/themes/cool/scss/gallery.scss
@@ -3,6 +3,7 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 1em;
+
     h1 {
         text-align: center;
         grid-column: span 3;
@@ -11,34 +12,31 @@
 }
 
 .image {
-    margin: {
-        left: 1em;
-        top: 1em;
-        right: 1em;
-        bottom: 1em;
-    }
     box-shadow: 6px 6px 10px 6px rgba($image-shadow, $image-shadow, $image-shadow, 0.2);
     grid-column: span 1;
+    margin: 1em;
 }
+
 @media (max-width: 992px) {
-
-    .gallery  {
+    .gallery {
         grid-template-columns: repeat(2, 1fr);
+
         h1 {
-        text-align: center;
-        grid-column: span 2;
-        justify-self: center;
-    }
+            text-align: center;
+            grid-column: span 2;
+            justify-self: center;
+        }
     }
 }
-@media (max-width: 767px) {
 
-    .gallery{
+@media (max-width: 767px) {
+    .gallery {
         grid-template-columns: 1fr;
+
         h1 {
-        text-align: center;
-        grid-column: span 1;
-        justify-self: center;
-    }
+            text-align: center;
+            grid-column: span 1;
+            justify-self: center;
+        }
     }
 }
