--- a/themes/cool/analysreport.twig
+++ b/themes/cool/analysreport.twig
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--Cool Theme-->
-<html class="no-js">
+<html lang="sv" class="no-js">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -34,7 +34,7 @@
 
     <header class="site-header">
         <div class="hero-image" style="background-image: url({{ base_url }}/image/landscape.jpg?sc=banner1&a=25,0,25,0&w=1800);">
-            <a id="nav-toggle" class="nav-toggle" title="Toggle Menu" role="button" aria-controls="nav" aria-expanded="false" tabindex="1">
+            <a id="nav-toggle" class="nav-toggle" title="Toggle Menu" role="button" aria-controls="nav" aria-expanded="false">
                 <i class="fas fa-bars" aria-hidden="true" id="toggler" class="toggler"></i>
                 <span class="sr-only">Toggle Menu</span>
             </a>
@@ -42,16 +42,12 @@
             <div class="hero-text"> 
                 {% if pages["_meta"].meta.logo %}
                     <div class="logo" aria-hidden="true">
-                        <a href="{{ "index"|link }}">
-                            <img src="{{ base_url }}/{{ pages["_meta"].meta.logo|url }}" alt="" />
-                        </a>
+                        <img src="{{ base_url }}/{{ pages["_meta"].meta.logo|url }}" alt="" />
                     </div>
                 {% endif %}
                 <div class="title" {{ pages["_meta"].meta.tagline ? ' class="tagline"' }}>
-                    <a href="{{ "index"|link }}">
-                        <h1>{{ site_title }}</h1>
-                        {{ pages["_meta"].meta.tagline|markdown }}
-                    </a>
+                    <h1>{{ site_title }}</h1>
+                    {{ pages["_meta"].meta.tagline|markdown }}
                 </div>
             </div>
         
@@ -75,9 +71,9 @@
     <main class="main" role="main">
         <div class="kmom-frame">
             <div class="kmom-links">
-                <a href="01_colors"><h3>Analys 1</h3></a>
-                <a href="02_load"><h3>Analys 2</h3></a>
-                <a href="03_design_principles"><h3>Analys 3</h3></a>
+                <a href="01_colors"><h2>Analys 1</h2></a>
+                <a href="02_load"><h2>Analys 2</h2></a>
+                <a href="03_design_principles"><h2>Analys 3</h2></a>
             </div>
             <div class="kmom-content">
             {{ content }}
